Fix navbar dropdown alignment

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -149,7 +149,7 @@
   #nav-profile {
     /* border: 1px solid purple; */
     float: right;
-    width: 75px;;
+    width: 75px;
   }
 
   #nav-bar-profile.dropdown:hover {
@@ -160,8 +160,9 @@
 
   /* The dropdown container itself */
   .dropdown {
-    /* float: left; */
-    overflow: hidden;
+    left:auto;
+    right:0;
+    margin-right:-10px;
   }
   
   /* Dropdown buttons */
@@ -190,17 +191,20 @@
     min-width: 140px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    left:auto;
+    right:0;
+    margin-right:-10px;
   }
   
   /* Links inside the dropdown */
   .dropdown-content a {
     float: left;
     color: #444;
-    padding: 12px 16px;
+    padding: 30px;
     text-decoration: none;
     display: block;
-    text-align: left;
-    font-size: smaller;
+    text-align: right;
+    font-size: larger;
   }
   
   /* Add a grey background color to dropdown links on hover */
